Issue #736: Removing old admin theme coloring from Layout admin.

--- a/modules/layout/css/layout.admin.css
+++ b/modules/layout/css/layout.admin.css
@@ -1,6 +1,6 @@
 /* Layout listing form. */
 #layout-list .layout-group td {
-  background: #E1E2DC;
+  background: #dddddd;
 }
 #layout-list .layout-group td:first-child {
   font-weight: bold;
