Issue #888: Update appearance of field settings button
Removed the cog image and added Configure text
Updated style to make appearance 'more secondary'

--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -1220,7 +1220,8 @@ div.add-or-remove-shortcuts {
 /* Field UI */
 #field-display-overview input.field-formatter-settings-edit {
   margin: 0;
-  padding: 1px 8px;
+  padding: .4em 1em;
+  line-height: 1.2;
 }
 #field-display-overview tr.field-formatter-settings-changed {
   background: #ffffbb;
