Issue #101: Expanding filter formats to include editor configuration.

--- a/modules/system/css/system.css
+++ b/modules/system/css/system.css
@@ -304,6 +304,37 @@ tr .ajax-progress-throbber .throbber {
 }
 
 /**
+ * Text alignment classes.
+ */
+.text-align-left {
+  text-align: left;
+}
+.text-align-right {
+  text-align: right;
+}
+.text-align-center {
+  text-align: center;
+}
+.text-align-justify {
+  text-align: justify;
+}
+
+/**
+ * Alignment classes (images, videos, blockquotes …).
+ */
+.align-left {
+  float: left;
+}
+.align-right {
+  float: right;
+}
+.align-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/**
  * Block-level HTML5 display definition.
  *
  * Provides display values for browsers that don't recognize the new elements
@@ -323,14 +354,4 @@ nav,
 section,
 summary {
   display: block;
-}
-
-/**
- * Floated images.
- */
-img.align-left {
-  float: left;
-}
-img.align-right {
-  float: right;
 }
