Issue #2014851 by hlieberman, Wim Leers, bradjones1, markcarver: Drupal CSS preprocessing breaks protocol-relative paths.

--- a/modules/simpletest/files/css_test_files/css_input_with_import.css.unoptimized.css
+++ b/modules/simpletest/files/css_test_files/css_input_with_import.css.unoptimized.css
@@ -1,5 +1,6 @@
 
-
+@import url("http://example.com/style.css");
+@import url("//example.com/style.css");
 
 ul, select {
   font: 1em/160% Verdana, sans-serif;
