--- a/modules/simpletest/files/css_test_files/css_input_with_import.css
+++ b/modules/simpletest/files/css_test_files/css_input_with_import.css
@@ -1,5 +1,6 @@
 
-
+@import url("http://example.com/style.css");
+@import url("//example.com/style.css");
 @import "import1.css";
 @import "import2.css";
 
