Issue #101: Add unidirectional syncing of settings from editor to filters when configuring CKEditor.

--- a/modules/ckeditor/css/ckeditor.admin.css
+++ b/modules/ckeditor/css/ckeditor.admin.css
@@ -83,6 +83,7 @@
 }
 .ckeditor-group-add-wrapper {
   float: left; /* LTR */
+  margin: 0px 0.3333em;
 }
 [dir="rtl"] .ckeditor-group-add-wrapper {
   float: right;
