--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -1335,6 +1335,8 @@ div.add-or-remove-shortcuts {
     margin: 0;
     height: 100%;
     width: 100%;
+  }
+  .maintenance-page-wrapper {
     display: table;
   }
   body.maintenance-page {
