--- a/modules/layout/css/layout.admin.css
+++ b/modules/layout/css/layout.admin.css
@@ -13,16 +13,31 @@
 }
 
 /* Individual layout settings form. */
-.layout-settings-form .layout-options {
+.layout-settings-form .form-type-radios {
   width: 100%;
 }
+.layout-settings-form .layout-options .form-radios {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  line-height: 1.3;
+  max-width: calc(100vw - 60px); /* Fix flex-wrap issue in some browsers */
+}
+.layout-settings-form .layout-options.no-flexbox .form-radios {
+  display: block;
+}
 .layout-settings-form .layout-options .form-type-radio {
-  float: left;
+  width: 100px;
+  margin: 0 5px 5px 0;
+  padding: 0;
   text-align: center;
 }
-.layout-settings-form .layout-icon .layout-caption {
-  width: 90px;
-  margin-bottom: 1em;
+.layout-settings-form .layout-options.no-flexbox .form-type-radio {
+  float: left;
 }
 
 /* Menu item argument settings. */
