--- a/themes/bartik/css/style.css
+++ b/themes/bartik/css/style.css
@@ -606,7 +606,7 @@ ul.tips {
 .content {
   margin-top: 10px;
 }
-h1#page-title {
+.page-title {
   font-size: 2em;
   line-height: 1;
   margin-top: .5em;
