Issue #1088: Add the ability to upload an image through CKEditor.

--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -700,8 +700,7 @@ div.teaser-checkbox .form-item,
   padding-bottom: 0;
 }
 .form-item label {
-  margin: 0;
-  padding: 0 0 10px;
+  margin: 0 0 10px;
 }
 .form-item label.option {
   font-size: 0.923em;
