--- a/modules/filter/css/filter.css
+++ b/modules/filter/css/filter.css
@@ -73,3 +73,25 @@ input#edit-filters-filter-html-settings-allowed-html {
   margin-right: 0;
   margin-left: 20px;
 }
+.editor-image-toggle {
+  display: inline-block;
+  padding: 0 1em;
+  border-left: none;
+  border-right: 1px solid #CCC;
+}
+[dir="rtl"] .editor-image-toggle {
+  border-right: none;
+  border-left: 1px solid #CCC;
+}
+[dir="ltr"] .editor-image-toggle.first {
+  padding-left: 0;
+}
+[dir="ltr"] .editor-image-toggle.last {
+  border-right: none;
+}
+[dir="rtl"] .editor-image-toggle.first {
+  padding-right: 0;
+}
+[dir="rtl"] .editor-image-toggle.last {
+  border-left: none;
+}
