Issue #1088: Make settings toggle with associated buttons in CKEditor (part of image uploading).

--- a/modules/filter/css/filter.css
+++ b/modules/filter/css/filter.css
@@ -56,6 +56,14 @@ input#edit-filters-filter-html-settings-allowed-html {
   width: 100%;
   max-width: 500px;
 }
+.editor-dialog .form-managed-file .form-file,
+.editor-dialog .form-managed-file .file {
+  max-width: 18em;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  vertical-align: middle;
+}
 .editor-image-size div {
   display: inline;
 }
