--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -759,6 +759,10 @@ div.teaser-checkbox .form-item,
 fieldset label {
   font-weight: normal;
 }
+.field-label label {
+  margin: 0;
+  padding: 0;
+}
 .form-item label.option {
   font-size: 0.923em;
   text-transform: none;
