Issue #240: Removing old Entity module integration and cruft from Drupal 7 in Link module.

--- a/modules/link/css/link.css
+++ b/modules/link/css/link.css
@@ -1,6 +1,10 @@
+/**
+ * @file
+ * Styles for Link module.
+ */
 .link-field-column {
-  float: left;
-  width: 48%;
+  display: inline-block;
+  width: 50%;
 }
 
 .link-field-column .form-text {
