Issue #240: Skipping validation on default values for Link configuration. Minor code cleanup.

--- a/modules/link/css/link.css
+++ b/modules/link/css/link.css
@@ -10,3 +10,11 @@
 .link-field-column .form-text {
   width: 95%;
 }
+@media only screen and (max-width: 500px) {
+  .link-field-column {
+    width: auto;
+  }
+  .link-field-column .form-text {
+    width: 100%;
+  }
+}
