--- a/modules/system/css/system.theme.css
+++ b/modules/system/css/system.theme.css
@@ -8,13 +8,16 @@
  * HTML elements.
  */
 fieldset {
-  min-width: 0; /* Webkit/Blink fix for mobile */
+  /* Webkit/Blink fix for mobile, see stackoverflow.com/questions/17408815 */
+  min-width: 0;
   margin-bottom: 1em;
   padding: 0.5em;
 }
 @-moz-document url-prefix() {
+  /* Firefox fix, see stackoverflow.com/questions/17408815 */
   fieldset {
-    display: table-cell; /* Firefox mobile fix */
+    display: table-cell;
+    vertical-align: top;
   }
 }
 form {
