--- a/themes/seven/css/vertical-tabs.css
+++ b/themes/seven/css/vertical-tabs.css
@@ -1,94 +1,190 @@
-
 /**
  * Override of misc/vertical-tabs.css.
  */
 .vertical-tabs {
-  background: #fff url(../images/fc.png) repeat-y 0 0; /* LTR */
-  border: 1px solid #ccc;
-  margin: 10px 0;
   position: relative;
-}
-[dir="rtl"] .vertical-tabs {
-  background: #fff url(../images/fc-rtl.png) repeat-y right 0;
-}
-fieldset.vertical-tabs-pane {
-  border: 0;
-  padding: 0;
-  margin: 0;
-}
-.vertical-tabs .vertical-tabs-list {
-  border-bottom: 1px solid #ccc;
-  float: left; /* LTR */
-  font-size: 0.923em;
-  line-height: 1.385em;
-  margin: 0 -100% -1px 0; /* LTR */
-  padding: 0;
-  width: 240px;
-}
-[dir="rtl"] .vertical-tabs .vertical-tabs-list {
-  float: right;
-  margin: 0 0 -1px -100%;
-}
-.vertical-tabs .vertical-tab-button {
-  list-style: none;
-  list-style-image: none;
-  margin: 0;
-}
-.vertical-tabs .vertical-tab-button a {
-  border-top: 1px solid #ccc;
-  display: block;
-  padding: 10px;
-}
-.vertical-tabs .first a {
-  border-top: 0;
-}
-.vertical-tabs .vertical-tab-button strong {
-  font-size: 0.923em;
-}
-.vertical-tabs .vertical-tab-button .summary {
-  color: #666;
-  display: block;
-  font-size: 0.846em;
-  padding-top: 0.4em;
-}
-.vertical-tabs .vertical-tab-button a:hover,
-.vertical-tabs .vertical-tab-button a:focus {
-  background: #d5d5d5;
-  text-decoration: none;
-  outline: 0;
-}
-.vertical-tabs .selected a,
-.vertical-tabs .selected a:hover,
-.vertical-tabs .selected a:focus,
-.vertical-tabs .selected a:active {
+  margin: 1em 0;
+  border: 1px solid #ccc;
   background: #fff;
-  border-right-color: #fff; /* LTR */
-  border-top: 1px solid #ccc;
 }
-[dir="rtl"] .vertical-tabs .selected a,
-[dir="rtl"] .vertical-tabs .selected a:hover,
-[dir="rtl"] .vertical-tabs .selected a:focus,
-[dir="rtl"] .vertical-tabs .selected a:active {
-  border-left-color: #fff;
+ @media (min-width: 750px) {
+  .vertical-tabs {
+    padding: 0 0 0 15em; /* LTR */
+  }
+   [dir="rtl"] .vertical-tabs {
+     padding-left: 0;
+     padding-right: 15em;
+  }
+  .vertical-tabs:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    width: 15em;
+    height: 100%;
+    background: #ccc;
+  }
 }
-.vertical-tabs .first.selected a,
-.vertical-tabs .first.selected a:hover {
-  border-top: 0;
-}
-.vertical-tabs .selected a:focus strong {
-  text-decoration: underline;
-}
-.vertical-tabs .vertical-tabs-panes {
-  margin: 0 0 0 265px; /* LTR */
-  padding: 10px 15px 10px 0; /* LTR */
-}
-[dir="rtl"] .vertical-tabs .vertical-tabs-panes {
-  margin: 0 265px 0 0;
-  padding: 10px 0 10px 15px;
-}
-fieldset.vertical-tabs-pane > legend {
+.vertical-tabs-list {
+  position: relative;
+  z-index: 1;
   display: none;
+  width: 15em;
+  border-top: 1px solid #ccc;
+  padding: 0;
 }
-.vertical-tabs-pane .fieldset-wrapper > div:first-child {
-  padding-top: 5px;
+ @media (min-width: 750px) {
+  .vertical-tabs-list {
+    display:block;
+    float: left; /* LTR */
+    margin: -1px 0 -1px -15em; /* LTR */
+  }
+   [dir="rtl"] .vertical-tabs-list {
+    margin-left: 0;
+    margin-right: -15em;
+    float: right;
+  }
+}
+.vertical-tab-item {
+  list-style: none;
+  font-size: 0.923em;
+}
+.vertical-tabs-pane {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+}
+.vertical-tabs-pane:nth-last-child(2) {
+  border-bottom: 0;
+}
+.vertical-tabs-pane .fieldset-wrapper {
+  display: none;
+  padding: 0 1em;
+}
+.vertical-tab-selected .fieldset-wrapper {
+  display: block;
+}
+@media (min-width: 750px) {
+  .vertical-tabs-panes {
+    overflow: hidden;
+    width: 100%;
+  }
+  .vertical-tabs-pane {
+    /* Using position and height instead of display because of FF issue */
+    position: absolute;
+    left: -9999em;
+    height: 0;
+    border: 0;
+    background: transparent;
+  }
+  /* Show active pane */
+  .vertical-tabs-pane.vertical-tab-selected {
+    position: static;
+    height: auto;
+    padding: 10px 15px;
+    background: transparent;
+  }
+  .vertical-tabs-pane > legend {
+    display: none;
+  }
+  .vertical-tabs-pane .fieldset-wrapper {
+    display: block;
+  }
+}
+ /* Layout of each tab */
+.vertical-tab-item {
+  border: 1px solid #ccc;
+  border-left-width: 0; /* LTR */
+  border-top-width: 0;
+  padding: 0;
+  margin: 0;
+  background: #eee;
+}
+[dir="rtl"] .vertical-tab-item {
+  border-left-width: 1px;
+  border-right-width: 0;
+}
+/* .vertical-tab-link applies to fieldset legend at small screens and
+   a link in .vertical-tabs-list at larger screen sizes */
+.vertical-tab-link {
+  display: block;
+  text-decoration: none;
+  padding: 0.5em 0.6em;
+  font-size: 1em;
+  cursor: pointer;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
+}
+.vertical-tab-link span{
+  display: block;
+}
+
+.vertical-tab-link strong,
+.vertical-tab-link .fieldset-legend {
+  position: static;
+  font-weight: bold;
+  color: #0074bd;
+  margin: 0;
+  padding: 0;
+}
+@media (min-width: 750px) {
+  .vertical-tab-link strong,
+  .vertical-tab-link .fieldset-legend {
+    font-size: 0.923em;
+  }
+}
+.vertical-tab-link:focus,
+.vertical-tab-link:active,
+.vertical-tab-link:hover,
+.vertical-tab-link:focus,
+.vertical-tab-link:active,
+.vertical-tab-link:hover {
+  text-decoration: none;
+  background: #d5d5d5;
+}
+.vertical-tab-link .summary {
+  font-size: 0.846em;
+  text-transform: none;
+  color: #666;
+}
+.vertical-tab-selected.vertical-tab-item {
+  background-color: #fff;
+  border-right-width: 0; /* LTR */
+}
+ [dir="rtl"] .vertical-tab-selected.vertical-tab-item {
+  border-left-width: 0;
+  border-right-width: 1px;
+}
+.vertical-tab-selected .vertical-tab-link {
+  background: #fff;
+}
+.vertical-tab-selected strong,
+.vertical-tab-selected .fieldset-legend {
+  color: #000;
+}
+.vertical-tabs .vertical-tabs .vertical-tabs-list .summary {
+  line-height: normal;
+  margin-bottom: 0;
+}
+/* Styles for legend at smaller screen sizes */
+.vertical-tabs-pane > .vertical-tab-link {
+  width: 100%;
+  box-sizing: border-box;
+  padding-left: 1em;
+  padding-right: 1em;
+  background: #eee;
+}
+.vertical-tabs-pane.vertical-tab-selected > .vertical-tab-link {
+  padding-top: 0.7em;
+  padding-bottom: 0.7em;
+  background: transparent;
+  border-bottom: 1px solid #eee;
+}
+.vertical-tabs-pane.vertical-tab-selected > .vertical-tab-link .summary {
+  display: none;
 }
