Issue #929: Fixing zebra striping in Layout search.

--- a/modules/layout/css/layout.admin.css
+++ b/modules/layout/css/layout.admin.css
@@ -53,6 +53,30 @@
 .layout-block-list {
   max-height: 300px;
   overflow: auto;
+  padding: 0 5px 0 0;
+}
+.layout-block-add-row.form-item {
+  padding:5px;
+  border-bottom: 1px solid #CCC;
+  margin: 0;
+}
+.layout-block-add-row.odd {
+  background-color: #F3F4EE;
+}
+.layout-block-list-wrapper {
+  border: 1px solid #CCC;
+}
+.layout-block-add-row.form-item {
+  padding: 5px;
+  border-bottom: 1px solid #CCC;
+  margin: 0;
+}
+.layout-block-add-row.odd {
+  background-color: #F3F4EE;
+}
+.layout-block-list-wrapper {
+  border: 1px solid #CCC;
+  border-bottom: none;
 }
 
 /* Layout editor. */
