--- a/modules/system/css/system.css
+++ b/modules/system/css/system.css
@@ -236,6 +236,13 @@ tr .ajax-progress-throbber .throbber {
 }
 
 /**
+ * Text centered wrapper.
+ */
+.centered-wrapper {
+  text-align: center;
+}
+
+/**
  * For anything you want to hide on page load when JS is enabled, so
  * that you can use the JS to control visibility and avoid flicker.
  */
