Issue #1189: Fixed CSS conflict with layouts and captions.

--- a/modules/layout/css/layout.admin.css
+++ b/modules/layout/css/layout.admin.css
@@ -20,7 +20,7 @@
   float: left;
   text-align: center;
 }
-.layout-settings-form .layout-icon .caption {
+.layout-settings-form .layout-icon .layout-caption {
   width: 90px;
   margin-bottom: 1em;
 }
