--- a/modules/views_ui/css/views_ui.admin.css
+++ b/modules/views_ui/css/views_ui.admin.css
@@ -223,29 +223,24 @@
 
 /* @group Attachment configuration columns */
 @media (min-width: 768px) {
+  #edit-display-settings-details {
+    padding: 0.5em;
+  }
+
+  #edit-display-settings-top,
+  .views-display-columns {
+    /* Prevent extra spacing on outer edges from child padding */
+    margin: 0 -0.5em;
+  }
+
   .views-display-columns > * {
+    box-sizing: border-box;
     float: left; /* LTR */
-    margin-left: 1%; /* LTR */
-    padding-left: 1%; /* LTR */
-    width: 32%;
+    width: 33.333%;
+    padding: 0 0.5em;
   }
   [dir="rtl"] .views-display-columns > * {
     float: right;
-    margin-left: 0;
-    margin-right: 1%;
-    padding-left: 0;
-    padding-right: 1%;
-  }
-
-  .views-display-columns > *:first-child {
-    margin-left: 0; /* LTR */
-    padding-left: 0; /* LTR */
-  }
-  [dir="rtl"] .views-display-columns > *:first-child {
-    margin-left: inherit;
-    margin-right: 0;
-    padding-left: inherit;
-    padding-right: 0;
   }
 }
 
