--- a/modules/system/css/system.admin.css
+++ b/modules/system/css/system.admin.css
@@ -110,13 +110,7 @@ span.admin-missing {
  */
 table.system-status-report td {
   padding: 11px 6px;
-  vertical-align: middle;
-}
-table.system-status-report tr.merge-up td {
-  padding: 0 6px 8px 40px; /* LTR */
-}
-[dir="rtl"] table.system-status-report tr.merge-up td {
-  padding: 0 40px 8px 6px;
+  vertical-align: top;
 }
 table.system-status-report td.status-icon {
   width: 16px;
@@ -139,24 +133,46 @@ table.system-status-report td.status-icon div:before {
   border-radius: 15px;
 }
 table.system-status-report tr.info td.status-icon div:before {
-  background: #CCCCCC url(../../../misc/message-16-info.png) no-repeat center center;
+  background: #CCCCCC url(../../../misc/icon-info.png) no-repeat center center;
+  background-size: 60%;
 }
 table.system-status-report tr.status td.status-icon div:before {
-  background: #CFDE56 url(../../../misc/message-16-ok.png) no-repeat center center;
+  background: #CFDE56 url(../../../misc/icon-ok.png) no-repeat center center;
+  background-size: 60%;
 }
 table.system-status-report tr.error td.status-icon div:before {
-  background: #EE3D23 url(../../../misc/message-16-error.png) no-repeat center center;
+  background: #EE3D23 url(../../../misc/icon-error.png) no-repeat center center;
+  background-size: 60%;
 }
 table.system-status-report tr.warning td.status-icon div:before {
-  background: #FCE400 url(../../../misc/message-16-warning.png) no-repeat center center;
+  background: #FCE400 url(../../../misc/icon-warning.png) no-repeat center center;
+  background-size: 60%;
 }
-tr.merge-down,
-tr.merge-down td {
-  border-bottom-width: 0 !important;
+table.system-status-report td.status-title {
+  font-weight: bold;
+  line-height: 1.85em;
+  color: #000;
 }
-tr.merge-up,
-tr.merge-up td {
-  border-top-width: 0 !important;
+table.system-status-report .status-summary-mobile {
+  display: block;
+  font-weight: normal;
+}
+table.system-status-report .status-description {
+  font-size: 0.9em;
+  color: #444;
+}
+table.system-status-report tr.report-error .status-summary {
+  color: #EC351C;
+}
+@media all and (min-width: 721px) {
+  table.system-status-report .status-summary-mobile {
+    display: none;
+  }
+}
+@media all and (min-width: 768px) {
+  table.system-status-report td.status-title {
+    white-space: nowrap;
+  }
 }
 
 /**
