--- a/modules/system/css/system.admin.css
+++ b/modules/system/css/system.admin.css
@@ -106,47 +106,55 @@ span.admin-missing {
 }
 
 /**
- * Status report.
+ * Report icons. Used on status report and updates list.
  */
-table.system-status-report td {
-  padding: 11px 6px;
-  vertical-align: top;
-}
-table.system-status-report td.status-icon {
+table td.report-icon {
   width: 16px;
   padding-right: 0; /* LTR */
+  vertical-align: top;
 }
-[dir="rtl"] table.system-status-report td.status-icon {
+[dir="rtl"] table td.report-icon {
   padding-left: 0;
   padding-right: 6px;
 }
-table.system-status-report td.status-icon div {
+table td.report-icon div {
   background-repeat: no-repeat;
   width: 28px;
   height: 28px;
 }
-table.system-status-report td.status-icon div:before {
+table td.report-icon div:before {
   content: "";
   display: block;
   width: 28px;
   height: 28px;
   border-radius: 15px;
 }
-table.system-status-report tr.info td.status-icon div:before {
+table tr.report-unknown td.report-icon div:before {
+  background: #CCCCCC url(../../../misc/icon-question.png) no-repeat center center;
+  background-size: 60%;
+}
+table tr.report-info td.report-icon div:before {
   background: #CCCCCC url(../../../misc/icon-info.png) no-repeat center center;
   background-size: 60%;
 }
-table.system-status-report tr.status td.status-icon div:before {
+table tr.report-status td.report-icon div:before {
   background: #CFDE56 url(../../../misc/icon-ok.png) no-repeat center center;
   background-size: 60%;
 }
-table.system-status-report tr.error td.status-icon div:before {
+table tr.report-error td.report-icon div:before {
   background: #EE3D23 url(../../../misc/icon-error.png) no-repeat center center;
   background-size: 60%;
 }
-table.system-status-report tr.warning td.status-icon div:before {
+table tr.report-warning td.report-icon div:before {
   background: #FCE400 url(../../../misc/icon-warning.png) no-repeat center center;
   background-size: 60%;
+}
+
+/**
+ * Status report.
+ */
+table.system-status-report td {
+  vertical-align: top;
 }
 table.system-status-report td.status-title {
   font-weight: bold;
@@ -170,10 +178,17 @@ table.system-status-report tr.report-error .status-summary {
   }
 }
 @media all and (min-width: 768px) {
+  table.system-status-report td {
+    padding: 10px 20px;
+  }
   table.system-status-report td.status-title {
     white-space: nowrap;
   }
 }
+table.system-status-report tr.report-error .status-summary {
+  color: #EC351C;
+}
+
 
 /**
  * Theme settings.
