--- a/modules/views_ui/css/views_ui.admin.theme.css
+++ b/modules/views_ui/css/views_ui.admin.theme.css
@@ -117,11 +117,11 @@
 }
 
 .views-admin .icon.add {
-  background-position: center 3px;
+  background-position: center 5px;
 }
 
 .views-admin a.icon.add {
-  background-position: center 3px, left top;
+  background-position: center 5px, left top;
 }
 
 .views-admin .icon.delete {
@@ -145,7 +145,7 @@
 }
 
 .views-displays .secondary .open a:hover > .icon.add {
-  background-position: center 3px;
+  background-position: center 5px;
 }
 
 /* @end */
@@ -356,8 +356,8 @@ input.form-radio {
 .views-admin h1.unit-title {
   font-size: 15px;
   line-height: 1.6154;
-  margin-bottom: 0;
-  margin-top: 18px;
+  margin: 0;
+  padding-top: 1.5em;
 }
 
 /* @end */
@@ -510,7 +510,7 @@ td.group-title {
 
 .views-display-top {
   background-color: #F9F9F9;
-  padding: 8px 8px 8px; /* LTR */
+  margin: .5em 0;
   position: relative;
 }
 
@@ -542,20 +542,12 @@ td.group-title {
  * The tabs that switch between sections
  */
 
-ul#views-display-menu-tabs li {
+#views-display-menu-tabs li {
   margin-bottom: 5px;
 }
 
-ul#views-display-menu-tabs li.add ul.action-list li{
+#views-display-menu-tabs li.add ul.action-list li {
   margin: 0;
-}
-
-.views-displays .secondary a {
-  border: 1px solid #cbcbcb;
-  display: inline-block;
-  font-size: small;
-  line-height: 1.3333;
-  padding: 3px 7px;
 }
 
 /**
@@ -578,6 +570,9 @@ ul#views-display-menu-tabs li.add ul.action-list li{
   border-bottom-width: 1px;
 }
 
+.views-displays .secondary .add > a {
+  border: 1px solid #cbcbcb;
+}
 .views-displays .secondary .open > a {
   background-color: #f1f1f1;
   border-bottom: 1px solid transparent;
@@ -586,6 +581,10 @@ ul#views-display-menu-tabs li.add ul.action-list li{
 
 .views-displays .secondary .open > a:hover {
   background-color: #f1f1f1;
+}
+
+.views-displays .secondary .action-list {
+  box-shadow: 0 5px 5px -5px hsla(0, 0%, 0%, 0.3);
 }
 
 .views-displays .secondary .action-list  li {
@@ -613,6 +612,7 @@ ul#views-display-menu-tabs li.add ul.action-list li{
   border: medium none;
   margin: 0;
   padding: 0;
+  line-height: 1;
 }
 
 .views-displays .secondary .action-list li:hover {
@@ -683,6 +683,10 @@ ul#views-display-menu-tabs li.add ul.action-list li{
 #views-ui-preview-form .form-type-textfield {
   margin: 0 0 0 14px;
 }
+[dir="rtl"] #views-ui-preview-form .arguments-preview,
+[dir="rtl"] #views-ui-preview-form .form-type-textfield {
+  margin: 0 14px 0 0;
+}
 
 #views-ui-preview-form .form-type-textfield label {
   display: inline-block;
@@ -713,12 +717,9 @@ ul#views-display-menu-tabs li.add ul.action-list li{
 }
 
 .views-ui-display-tab-bucket > h3 {
-  padding: 10px 20px;
+  padding: 11px 20px;
 }
 
-.views-ui-display-tab-bucket > .views-display-setting {
-  padding: 2px 6px 4px;
-}
 
 .views-ui-display-tab-bucket h3 {
   font-size: small;
@@ -781,9 +782,8 @@ ul#views-display-menu-tabs li.add ul.action-list li{
  */
 
 .views-ui-display-tab-bucket .views-display-setting {
-  color: #666666;
   font-size: 14px;
-  padding-bottom: 0.5em;
+  padding: .5em;
 }
 
 .views-ui-display-tab-bucket .views-group-text {
@@ -817,7 +817,7 @@ ul#views-display-menu-tabs li.add ul.action-list li{
 }
 
 .views-filterable-options .even .form-type-checkbox {
-  background-color: #F3F4EE;
+  background-color: #f7f7f7;
 }
 
 .filterable-option .form-item {
@@ -1123,9 +1123,6 @@ div.messages {
 [dir="rtl"] .views-display-top .dropbutton-wrapper {
   float: left;
 }
-.views-display-top .dropbutton-wrapper a {
-  font-size: 12px;
-}
 
 .views-ui-display-tab-bucket .dropbutton-wrapper {
   position: absolute;
@@ -1136,9 +1133,12 @@ div.messages {
   left: 20px;
   right: auto;
 }
+#edit-display-settings-top .dropbutton-wrapper {
+  top: 12px;
+}
 .views-ui-display-tab-bucket .dropbutton-wrapper,
 .views-ui-display-tab-bucket .dropbutton-wrapper * {
-  font-size: 11px;
+  font-size: 12px;
 }
 .views-ui-display-tab-bucket .dropbutton li > * {
   padding: 0.2em 0.75em;
@@ -1151,7 +1151,7 @@ div.messages {
   background: none;
   border: medium;
   font-family: inherit;
-  font-size: 12px;
+  font-size: 14px;
   padding-left: 12px;
   margin-bottom: 0;
   line-height: normal;
